# xflow

./: .gitignore  Cargo.toml  LICENSE  README.md  println_analysis.md
crates/xflow/: Cargo.toml
crates/xflow-agent/: Cargo.toml
crates/xflow-agent/src/: agent.rs  coder.rs  coordinator.rs  lib.rs  planner.rs  reviewer.rs
crates/xflow-context/: Cargo.toml
crates/xflow-context/src/: context.rs  language.rs  lib.rs  scanner.rs  token_estimator.rs
crates/xflow-core/: Cargo.toml
crates/xflow-core/src/: agent_executor_impl.rs  cli_adapter.rs  events.rs  interaction.rs  lib.rs  markdown_renderer.rs  output.rs  session.rs  thinking_animation.rs  tool_loop.rs  ui_adapter.rs  websocket_adapter.rs
crates/xflow-core/src/config/: mod.rs
crates/xflow-model/: Cargo.toml
crates/xflow-model/src/: lib.rs  ollama.rs  openai.rs  types.rs
crates/xflow-model/src/errors/: mod.rs
crates/xflow-model/src/prompts/: agent.rs  mod.rs  system.rs
crates/xflow-server/: Cargo.toml
crates/xflow-server/src/: api.rs  lib.rs  main.rs  state.rs  ws.rs  ws_interaction.rs
crates/xflow-tools/: Cargo.toml
crates/xflow-tools/src/: agent_executor.rs  agent_tool.rs  edit_file.rs  git.rs  lib.rs  list_directory.rs  read_file.rs  run_shell.rs  search_file.rs  tool.rs  tool_macro.rs  write_file.rs
crates/xflow/src/: main.rs  repl.rs
docs/: ARCHITECTURE.md  ENGINEERING-PRINCIPLES.md  PLAN-v1-archived.md  PLAN.md
web/: app.js  index.html  styles.css
