[package]
name = "xflow-core"
description = "xflow 核心引擎"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
xflow-model.workspace = true
xflow-tools.workspace = true
xflow-context.workspace = true
xflow-agent.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true
inquire.workspace = true
uuid.workspace = true
regex = "1.10"
once_cell = "1.19"
