[package]
name = "xflow-model"
description = "xflow 模型接口层"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true
async-stream.workspace = true
thiserror.workspace = true
tracing.workspace = true
